# django-prettify-html

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
django_prettify_html/: __init__.py  decorators.py  middleware.py
src/: lib.rs
tests/: test_format.py
