[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "django-prettify-html"
version = "0.1.1"
description = "Use markup_fmt, the extremely fast HTML formatter, with Django."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nick Petrovic" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
keywords = ["django", "html", "formatter", "prettify", "markup_fmt", "rust"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/nickpetrovic/django-prettify-html"
Repository = "https://github.com/nickpetrovic/django-prettify-html"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "django_prettify_html._native"
